src/client/styles.scss
/* You can add global styles to this file, and also import other style files */
@import '~@angular/material/theming';
@import 'app-theme-definition.scss';

// Open Sans font - https://google-webfonts-helper.herokuapp.com/fonts/open-sans
/* open-sans-regular - latin */
@font-face {
	font-family: 'Open Sans';
	font-style: normal;
	font-weight: 400;
	font-display: fallback;
	src: local('Open Sans Regular'), local('OpenSans-Regular'), url('assets/open-sans-v15-latin-regular.woff2') format('woff2'), url('assets/open-sans-v15-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* open-sans-700 - latin */
@font-face {
	font-family: 'Open Sans';
	font-style: normal;
	font-weight: 700;
	font-display: fallback;
	src: local('Open Sans Bold'), local('OpenSans-Bold'), url('assets/open-sans-v15-latin-700.woff2') format('woff2'), url('assets/open-sans-v15-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

// Body rule
body {
	margin: 0;

	// App root rules
	app-root {
		display: flex;
		flex-direction: column;
		min-height: 100vh;

		// Validation
		.validation-message {
			color: red;
		}

		app-show-errors ul {
			list-style: none;
			padding-left: 0;
			margin: 0;
		}

		// Center
		.center {
			margin: 0 auto !important;
			display: block !important;
		}

		// Material Card
		mat-card {
			margin-bottom: 10px;

			&[hidden] {
				display: none;
			}
		}

		.card-item {
			cursor: pointer;
			outline: none;
		}

		// Vertical radioo button layout
		.radio-group-vertical {
			display: inline-flex;
			flex-direction: column;

			.radio-button-vertical {
				margin: 5px;
			}
		}

		// Custom preloader with Material progress spinner
		mat-spinner {
			margin: 0 auto;
		}

		// Change color of visited links to primary theme color
		// a:visited {
		//     color: mat-color($app-primary);
		// }

		// Styling for any injected emoji
		.emoji-input {
			height: 20px;
			display: inline-block;
			width: 170px;
			padding: 2px 5px 2px 0;
			border-bottom: 1px solid gray;
			outline: none;
			white-space: nowrap;
			overflow: hidden;

			* {
				display: inline;
				white-space: nowrap;
			}

			br {
				display: none;
			}

			img {
				width: 1rem;
			}
		}

		// Placeholder text via 'data-text' attribute
		[contentEditable=true]:empty:not(:focus):before {
			content: attr(data-text);
			color: gray;
		}

		// Remove Chrome yellow autofill background color
		input:-webkit-autofill,
		input:-webkit-autofill:hover,
		input:-webkit-autofill:focus,
		input:-webkit-autofill:active {
			transition: all 5000s ease-in-out 0s;
		}
	}

	// Material CDK Connected Overlay fullscreen
	.cdk-overlay-pane.fullscreen {
		top: 0 !important;
		right: 0 !important;
		bottom: 0 !important;
		left: 0 !important;

		> * {
			width: 100vw;
			height: 100vh;
		}
	}

	// Emoji panel on mobile in bottom sheet (outside app-root)
	mat-bottom-sheet-container.emoji-panel {
		padding: 0;

		mat-tab-group {
			width: 100% !important;
		}
	}
}

// Override Quill toolbar with white icons when in night mode (Dark theme)
.dark-theme app-html-editor .ql-toolbar mat-icon {
	color: #fff;
}

